@@ -683,6 +683,36 @@ public class VerticalInheritanceIT extends ServerCase {
 	}
 
 	/**
+	 * @link https://issues.apache.org/jira/browse/CAY-2840
+	 */
+	@Test
+	public void testJointPrefetchBelongsTo() throws SQLException {
+		TableHelper ivOtherTable = new TableHelper(dbHelper, "IV_OTHER");
+		ivOtherTable.setColumns("ID", "NAME", "BASE_ID").setColumnTypes(Types.INTEGER, Types.VARCHAR, Types.INTEGER);
+
+		TableHelper ivBaseTable = new TableHelper(dbHelper, "IV_BASE");
+		ivBaseTable.setColumns("ID", "NAME", "TYPE").setColumnTypes(Types.INTEGER, Types.VARCHAR, Types.CHAR);
+
+		TableHelper ivImplTable = new TableHelper(dbHelper, "IV_IMPL");
+		ivImplTable.setColumns("ID", "ATTR1").setColumnTypes(Types.INTEGER, Types.VARCHAR);
+
+		ivBaseTable.insert(1, "Impl 1", "I");
+		ivImplTable.insert(1, "attr1");
+		ivOtherTable.insert(1, "other1", 1);
+
+		IvOther other = ObjectSelect.query(IvOther.class).prefetch(IvOther.BASE.joint()).selectOne(context);
+		assertNotNull(other);
+		assertNotNull(other.getBase());
+		assertTrue(IvImpl.class.isAssignableFrom(other.getBase().getClass()));
+
+		IvImpl impl = (IvImpl)other.getBase();
+		// Ensure that base attributes were prefetched correctly
+		assertEquals("Impl 1", impl.getName());
+		// Ensure that subclass attributes were prefetched correctly
+		assertEquals("attr1", impl.getAttr1());
+	}
+
+	/**
 	 * @link https://issues.apache.org/jira/browse/CAY-2282
 	 */
 	@Test
