@@ -4,9 +4,12 @@ import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 
+import java.util.List;
 import org.apache.cayenne.BaseDataObject;
+import org.apache.cayenne.exp.property.ListProperty;
 import org.apache.cayenne.exp.property.PropertyFactory;
 import org.apache.cayenne.exp.property.StringProperty;
+import org.apache.cayenne.testdo.inheritance_vertical.IvOther;
 
 /**
  * Class _IvBase was generated by Cayenne.
@@ -22,10 +25,12 @@ public abstract class _IvBase extends BaseDataObject {
 
     public static final StringProperty<String> NAME = PropertyFactory.createString("name", String.class);
     public static final StringProperty<String> TYPE = PropertyFactory.createString("type", String.class);
+    public static final ListProperty<IvOther> OTHERS = PropertyFactory.createList("others", IvOther.class);
 
     protected String name;
     protected String type;
 
+    protected Object others;
 
     public void setName(String name) {
         beforePropertyWrite("name", this.name, name);
@@ -47,6 +52,19 @@ public abstract class _IvBase extends BaseDataObject {
         return this.type;
     }
 
+    public void addToOthers(IvOther obj) {
+        addToManyTarget("others", obj, true);
+    }
+
+    public void removeFromOthers(IvOther obj) {
+        removeToManyTarget("others", obj, true);
+    }
+
+    @SuppressWarnings("unchecked")
+    public List<IvOther> getOthers() {
+        return (List<IvOther>)readProperty("others");
+    }
+
     @Override
     public Object readPropertyDirectly(String propName) {
         if(propName == null) {
@@ -58,6 +76,8 @@ public abstract class _IvBase extends BaseDataObject {
                 return this.name;
             case "type":
                 return this.type;
+            case "others":
+                return this.others;
             default:
                 return super.readPropertyDirectly(propName);
         }
@@ -75,6 +95,9 @@ public abstract class _IvBase extends BaseDataObject {
                 break;
             case "type":
                 this.type = (String)val;
+                break;
+            case "others":
+                this.others = val;
                 break;
             default:
                 super.writePropertyDirectly(propName, val);
@@ -94,6 +117,7 @@ public abstract class _IvBase extends BaseDataObject {
         super.writeState(out);
         out.writeObject(this.name);
         out.writeObject(this.type);
+        out.writeObject(this.others);
     }
 
     @Override
@@ -101,6 +125,7 @@ public abstract class _IvBase extends BaseDataObject {
         super.readState(in);
         this.name = (String)in.readObject();
         this.type = (String)in.readObject();
+        this.others = in.readObject();
     }
 
 }
